Started architecture for app functioning, divided all parts in right folders, started creating webserver to serve the frontend(as does liveserver ext)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,6 @@
       <title>My Inspiration List</title>
    </head>
    <body>
-      Home page MAN ! using thtat middleware for / uses an idnex.html file
+      Home page MAN ! 
    </body>
 </html>
