Connected backend with frontend with architecture idea, started building frontend using response data from api

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,12 @@
       <title>My Inspiration List</title>
    </head>
    <body>
-      Home page MAN ! 
+      <button id="list-inspirations-btn">List my inspirations</button>
+      
+      <div id="list">
+         <h1>My inspirations</h1>
+      </div>
+   
+      <script src="/static/index.js"></script>
    </body>
 </html>
