--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,14 +11,16 @@
       <h1 id="title">My inspirations</h1>
       <button id="list-inspirations-btn">List my inspirations</button>
       <button id="delete-inspiration-btn">Delete inspiration</button>
-      <button id="update-inpiration-btn">Update inspiration</button>
-      <button id="add-inpiration-btn">Add inspiration</button>
+      <button id="add-inspiration-btn">Add inspiration</button>
+      <button id="update-inspiration-btn">Update inspiration</button>
 
       <div id="list">
       </div>
 
-      <form method="POST" action="http://localhost:8000/inspirations/">
-            PENSANDO COME MANDARE ID
+      <form id="form-for-api" hidden=true>
+         <label for="id">Id of the inspiration to delete: </label>
+         <input type="text" id="id">
+         <input type="submit" value="Submit">
       </form>
    
       <script src="/static/index.js"></script>
