finished update btn(solved problem), started images uploading part but ecountered into an err

--- a/webserver/frontend/index.html
+++ b/webserver/frontend/index.html
@@ -38,6 +38,7 @@
          <input type="text" id="add-description"> 
          <label for="influenceField">Field of influence: </lable>
          <input type="text" id="add-influenceField"> <br>
+         <input type="file" id="add-image"> <br>
          <input type="submit" value="Add">
       </form>
       
