did image to server receiving part

--- a/webserver/frontend/index.html
+++ b/webserver/frontend/index.html
@@ -31,7 +31,7 @@
          <input type="submit" value="Submit">
       </form>
 
-      <form id="add-form-for-api" hidden=true>
+      <form id="add-form-for-api" hidden=true enctype="multipart/form-data">
          <label for="name">Name: </lable>
          <input type="text" id="add-name"> 
          <label for="description">Description </lable>
